This metaball-array kills blender #61431

Closed
opened 2019-02-11 22:56:58 +01:00 by Vyacheslav Kobozev · 5 comments

System Information
Operating system:
Graphics card: nvidia gt640

Blender Version
Broken: blender-2.80-69b2f5268114-win64.zip
Worked: 2.79b f4dc9f9d68

Short description of error
When i tried to move Curve (and all parented) Blender just closed.

Exact steps for others to reproduce the error
Try this file:
metaballs.blend

**System Information** Operating system: Graphics card: nvidia gt640 **Blender Version** Broken: blender-2.80-69b2f5268114-win64.zip Worked: 2.79b f4dc9f9d68b **Short description of error** When i tried to move Curve (and all parented) Blender just closed. **Exact steps for others to reproduce the error** Try this file: [metaballs.blend](https://archive.blender.org/developer/F6582864/metaballs.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2019-02-12 10:32:04 +01:00
Member

BLI_assert failed: /blender/blenkernel/intern/DerivedMesh.c:2181, mesh_get_eval_final(), at 'DEG_debug_is_evaluating(depsgraph) == 0'

1   raise							0x7ffff466953f 
2   abort							0x7ffff4653895 
3   mesh_get_eval_final			DerivedMesh.c      2181 0x2a022f1      
4   make_duplis_verts			object_dupli.c     409  0x2b98d45      
5   object_duplilist			object_dupli.c     1086 0x2b9ab4c      
6   BKE_scene_base_iter_next		scene.c            1103 0x2bf09ca      
7   init_meta				mball_tessellate.c 1052 0x2b30f75      
8   BKE_mball_polygonize		mball_tessellate.c 1244 0x2b31233      
9   BKE_displist_make_mball		displist.c         737  0x2a96744      
10  BKE_object_handle_data_update	object_update.c    199  0x2b9d4ad      
11  BKE_object_eval_uber_data		object_update.c    355  0x2b9dcfc

@Sergey: one for you?

`BLI_assert failed: /blender/blenkernel/intern/DerivedMesh.c:2181, mesh_get_eval_final(), at 'DEG_debug_is_evaluating(depsgraph) == 0'` ``` 1 raise 0x7ffff466953f 2 abort 0x7ffff4653895 3 mesh_get_eval_final DerivedMesh.c 2181 0x2a022f1 4 make_duplis_verts object_dupli.c 409 0x2b98d45 5 object_duplilist object_dupli.c 1086 0x2b9ab4c 6 BKE_scene_base_iter_next scene.c 1103 0x2bf09ca 7 init_meta mball_tessellate.c 1052 0x2b30f75 8 BKE_mball_polygonize mball_tessellate.c 1244 0x2b31233 9 BKE_displist_make_mball displist.c 737 0x2a96744 10 BKE_object_handle_data_update object_update.c 199 0x2b9d4ad 11 BKE_object_eval_uber_data object_update.c 355 0x2b9dcfc ``` @Sergey: one for you?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

There were few things wrong in dependency graph and instancing code. Should be fixed now. Thanks for the report, closing.

There were few things wrong in dependency graph and instancing code. Should be fixed now. Thanks for the report, closing.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61431
No description provided.